--- a/src/main/resources/com/example/projeto2_desktop/ClientesView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ClientesView.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -13,7 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="825.0" prefWidth="1525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.AgendamentoController">
+<AnchorPane prefHeight="825.0" prefWidth="1525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ClienteController">
    <children>
       <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -56,9 +55,9 @@
                                     <Cursor fx:constant="HAND" />
                                  </cursor>
                               </ImageView>
-                              <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#manageAgendamentos" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../Images/OnSchedule.png" />
+                                    <Image url="@../../../Images/Schedule.png" />
                                  </image>
                                  <VBox.margin>
                                     <Insets bottom="20.0" left="5.0" right="5.0" />
@@ -80,7 +79,7 @@
                               </ImageView>
                               <ImageView fitHeight="50.0" fitWidth="50.0" onMouseClicked="#manageClientes" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../../Images/Customer.png" />
+                                    <Image url="@../../../Images/OnCustomer.png" />
                                  </image>
                                  <VBox.margin>
                                     <Insets bottom="20.0" left="5.0" right="5.0" />
@@ -177,7 +176,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Label>
-                  <Label prefHeight="50.0" prefWidth="300.0" text="Gerir Agendamentos" textFill="#f59905">
+                  <Label prefHeight="50.0" prefWidth="300.0" text="Gerir Agendamentos" textFill="WHITE">
                      <font>
                         <Font size="21.0" />
                      </font>
@@ -199,7 +198,7 @@
                         <Cursor fx:constant="HAND" />
                      </cursor>
                   </Label>
-                  <Label onMouseClicked="#manageClientes" prefHeight="50.0" prefWidth="300.0" text="Gerir Clientes" textFill="#f7f6f6">
+                  <Label onMouseClicked="#manageClientes" prefHeight="50.0" prefWidth="300.0" text="Gerir Clientes" textFill="#f59905">
                      <font>
                         <Font size="21.0" />
                      </font>
@@ -275,82 +274,25 @@
             </VBox>
             <VBox fx:id="pane2" alignment="TOP_CENTER" style="-fx-background-color: #FFFF;">
                <children>
-                  <Label text="Agendamentos">
+                  <Label alignment="CENTER" prefHeight="90.0" prefWidth="314.0" text="Clientes">
                      <font>
                         <Font name="Calibri Bold" size="50.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER_LEFT" prefHeight="100.0">
+                  <HBox alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="1444.0">
                      <children>
-                        <ComboBox fx:id="marinaBox" prefHeight="40.0" prefWidth="254.0" promptText="Marina" style="-fx-background-color: #FFFF; -fx-border-color: #29296b; -fx-border-width: 2;">
+                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="300.0" stylesheets="@../../../CSS/Button.css" text="Novo Cliente">
                            <HBox.margin>
-                              <Insets left="80.0" right="120.0" />
-                           </HBox.margin>
-                        </ComboBox>
-                        <Button mnemonicParsing="false" onAction="#backOneMonth" stylesheets="@../../../CSS/Button.css" text="&lt;">
-                           <HBox.margin>
-                              <Insets left="70.0" />
-                           </HBox.margin>
-                           <font>
-                              <Font name="Calibri Bold" size="12.0" />
-                           </font></Button>
-                        <Label fx:id="year" alignment="CENTER" contentDisplay="CENTER" prefHeight="100.0" prefWidth="150.0" text="Label" />
-                        <Label fx:id="month" alignment="CENTER" layoutX="62.0" layoutY="10.0" prefHeight="100.0" prefWidth="150.0" text="Label" />
-                        <Button layoutX="10.0" layoutY="10.0" mnemonicParsing="false" onAction="#forwardOneMonth" stylesheets="@../../../CSS/Button.css" text="&gt;">
-                           <font>
-                              <Font name="Calibri Bold" size="12.0" />
-                           </font></Button>
-                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#createNovoAgend" prefHeight="40.0" prefWidth="300.0" stylesheets="@../../../CSS/Button.css" text="Novo Agendamento">
-                           <HBox.margin>
-                              <Insets left="120.0" right="80.0" />
+                              <Insets left="120.0" right="200.0" />
                            </HBox.margin>
                         </Button>
-                     </children>
-                  </HBox>
-                  <HBox alignment="BOTTOM_LEFT" prefHeight="26.0" prefWidth="1444.0">
-                     <children>
-                        <Label alignment="TOP_LEFT" contentDisplay="CENTER" prefWidth="100.0" text="Dom" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets left="170.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="10.0" prefWidth="100.0" text="Seg" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets left="125.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="38.0" layoutY="10.0" prefWidth="100.0" text="Ter" HBox.hgrow="ALWAYS">
-                           <HBox.margin>
-                              <Insets left="125.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="66.0" layoutY="10.0" prefWidth="100.0" text="Qua">
-                           <HBox.margin>
-                              <Insets left="125.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="94.0" layoutY="10.0" prefWidth="100.0" text="Qui">
-                           <HBox.margin>
-                              <Insets left="125.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label alignment="TOP_LEFT" contentDisplay="CENTER" layoutX="122.0" layoutY="10.0" prefWidth="100.0" text="Sex">
-                           <HBox.margin>
-                              <Insets left="125.0" />
-                           </HBox.margin>
-                        </Label>
-                        <Label alignment="BOTTOM_LEFT" contentDisplay="CENTER" layoutX="10.0" layoutY="52.0" prefWidth="100.0" text="Sab">
-                           <HBox.margin>
-                              <Insets left="125.0" right="100.0" />
-                           </HBox.margin>
-                        </Label>
-                        <VBox prefHeight="200.0" prefWidth="100.0" />
                      </children>
                   </HBox>
                   <FlowPane fx:id="calendar" alignment="CENTER" prefHeight="644.0" prefWidth="1444.0" VBox.vgrow="ALWAYS">
                      <VBox.margin>
                         <Insets bottom="10.0" />
-                     </VBox.margin></FlowPane>
+                     </VBox.margin>
+                  </FlowPane>
                </children>
             </VBox>
          </children>
