--- a/src/main/resources/com/example/projeto2_desktop/ClientesView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ClientesView.fxml
@@ -4,15 +4,16 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="825.0" prefWidth="1525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.ClienteController">
+<AnchorPane prefHeight="825.0" prefWidth="1525.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Cliente.ClienteController">
    <children>
       <HBox AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -274,25 +275,82 @@
             </VBox>
             <VBox fx:id="pane2" alignment="TOP_CENTER" style="-fx-background-color: #FFFF;">
                <children>
-                  <Label alignment="CENTER" prefHeight="90.0" prefWidth="314.0" text="Clientes">
+                  <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="62.0" prefWidth="1444.0" text="Clientes">
                      <font>
                         <Font name="Calibri Bold" size="50.0" />
                      </font>
                   </Label>
                   <HBox alignment="CENTER_RIGHT" prefHeight="58.0" prefWidth="1444.0">
                      <children>
-                        <Button alignment="CENTER" mnemonicParsing="false" prefHeight="40.0" prefWidth="300.0" stylesheets="@../../../CSS/Button.css" text="Novo Cliente">
+                        <ImageView fitHeight="40.0" fitWidth="40.0" onMouseClicked="#Search" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../../Images/Search.png" />
+                           </image>
+                           <cursor>
+                              <Cursor fx:constant="HAND" />
+                           </cursor>
                            <HBox.margin>
-                              <Insets left="120.0" right="200.0" />
+                              <Insets left="100.0" />
+                           </HBox.margin>
+                        </ImageView>
+                        <TextField fx:id="searchField" prefHeight="40.0" prefWidth="256.0" promptText="Pesquisar por Cliente" stylesheets="@../../../CSS/Marine.css">
+                           <HBox.margin>
+                              <Insets right="200.0" />
+                           </HBox.margin>
+                        </TextField>
+                        <Button alignment="CENTER" mnemonicParsing="false" onAction="#createNovoCliente" prefHeight="40.0" prefWidth="300.0" stylesheets="@../../../CSS/Marine.css" text="Novo Cliente">
+                           <HBox.margin>
+                              <Insets left="120.0" right="250.0" />
                            </HBox.margin>
                         </Button>
                      </children>
                   </HBox>
-                  <FlowPane fx:id="calendar" alignment="CENTER" prefHeight="644.0" prefWidth="1444.0" VBox.vgrow="ALWAYS">
-                     <VBox.margin>
-                        <Insets bottom="10.0" />
-                     </VBox.margin>
-                  </FlowPane>
+                  <HBox alignment="BOTTOM_CENTER" focusTraversable="true" prefHeight="62.0" prefWidth="1444.0">
+                     <children>
+                        <Label text="Nome">
+                           <HBox.margin>
+                              <Insets left="100.0" right="175.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Telefone">
+                           <HBox.margin>
+                              <Insets left="10.0" right="100.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Email">
+                           <HBox.margin>
+                              <Insets left="10.0" right="100.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="NIF">
+                           <HBox.margin>
+                              <Insets left="60.0" right="50.0" />
+                           </HBox.margin>
+                        </Label>
+                        <Label text="Ações">
+                           <HBox.margin>
+                              <Insets left="130.0" right="100.0" />
+                           </HBox.margin>
+                        </Label>
+                     </children>
+                  </HBox>
+                  <HBox alignment="CENTER" prefHeight="688.0" prefWidth="1444.0">
+                     <children>
+                        <ScrollPane fx:id="scroll" prefHeight="685.0" prefWidth="1166.0" style="-fx-border-color: #FFFF;">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="685.0">
+                                 <children>
+                                    <VBox fx:id="list" alignment="TOP_CENTER" prefHeight="688.0" prefWidth="1166.0" style="-fx-background-color: #FFFF;">
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" top="10.0" />
+                                       </padding>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </ScrollPane>
+                     </children>
+                  </HBox>
                </children>
             </VBox>
          </children>
