--- a/src/main/resources/com/example/projeto2_desktop/NovoAgendamentoView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/NovoAgendamentoView.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.NovoAgendamentoController">
+<AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.NovoAgendamentoController">
    <children>
       <Label layoutX="265.0" layoutY="14.0" text="Novo Agendamento">
          <font>
@@ -41,14 +41,14 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="205.0" layoutY="355.0" mnemonicParsing="false" stylesheets="@../../../CSS/Button.css" text="Adicionar Extras" />
+      <Button layoutX="205.0" layoutY="355.0" mnemonicParsing="false" stylesheets="@../../../CSS/Marine.css" text="Adicionar Extras" />
       <Label layoutX="143.0" layoutY="401.0" prefHeight="33.0" prefWidth="54.0" text="Valor">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
       <TextField fx:id="valorText" layoutX="205.0" layoutY="401.0" prefHeight="35.0" prefWidth="444.0" promptText="Valor" />
-      <Button fx:id="registarButton" layoutX="275.0" layoutY="495.0" mnemonicParsing="false" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Button.css" text="Guardar Alterações">
+      <Button fx:id="registarButton" layoutX="275.0" layoutY="495.0" mnemonicParsing="false" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Guardar Alterações">
          <font>
             <Font size="21.0" />
          </font>
