--- a/src/main/resources/com/example/projeto2_desktop/RegisterView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/RegisterView.fxml
@@ -13,7 +13,7 @@
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="825.0" prefWidth="1525.0" style="-fx-background-color: #FFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.RegisterController">
    <left>
-      <AnchorPane prefHeight="400.0" prefWidth="370.0" stylesheets="@../../../CSS/Button.css" BorderPane.alignment="CENTER">
+      <AnchorPane prefHeight="400.0" prefWidth="370.0" stylesheets="@../../../CSS/Marine.css" BorderPane.alignment="CENTER">
          <children>
             <Label alignment="CENTER" layoutX="94.0" layoutY="-6.0" lineSpacing="3.0" prefHeight="128.0" prefWidth="690.0" text="Registar" textAlignment="CENTER">
                <font>
@@ -31,7 +31,7 @@
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Button fx:id="registarButton" layoutX="302.0" layoutY="738.0" mnemonicParsing="false" onAction="#Registar" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Button.css" text="Registar">
+            <Button fx:id="registarButton" layoutX="302.0" layoutY="738.0" mnemonicParsing="false" onAction="#Registar" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Registar">
                <font>
                   <Font size="21.0" />
                </font>
