--- a/src/main/resources/com/example/projeto2_desktop/FuncionarioNovoView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/FuncionarioNovoView.fxml
@@ -9,14 +9,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="370.0" style="-fx-background-color: #FFFF;" stylesheets="@../../../CSS/Marine.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Funcionario.FuncionarioNovoController">
+<AnchorPane prefHeight="400.0" prefWidth="370.0" style="-fx-background-color: #FFFF;" stylesheets="@../../../CSS/Marine.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Cliente.NovoClienteController">
    <children>
       <Label alignment="CENTER" layoutX="-6.0" layoutY="-6.0" lineSpacing="3.0" prefHeight="128.0" prefWidth="690.0" textAlignment="CENTER">
          <font>
             <Font name="Georgia Bold" size="96.0" />
          </font>
       </Label>
-      <TextField fx:id="nomeText" layoutX="164.0" layoutY="105.0" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/Marine.css" />
+      <TextField fx:id="nomeText" layoutX="164.0" layoutY="105.0" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/TextField.css" />
       <Label layoutX="115.0" layoutY="107.0" prefHeight="34.0" prefWidth="39.0" text="Nome:">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -27,7 +27,7 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <Button layoutX="232.0" layoutY="618.0" mnemonicParsing="false" onAction="#CriarFuncionario" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Funcionário">
+      <Button layoutX="212.0" layoutY="618.0" mnemonicParsing="false" onAction="#CriarFuncionario" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Funcionário">
          <font>
             <Font size="21.0" />
          </font>
@@ -35,7 +35,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <PasswordField fx:id="passwordText" layoutX="163.0" layoutY="554.0" prefHeight="35.0" prefWidth="444.0" promptText="Password" stylesheets="@../../../CSS/Marine.css" />
+      <PasswordField fx:id="passwordText" layoutX="163.0" layoutY="554.0" prefHeight="35.0" prefWidth="444.0" promptText="Password" stylesheets="@../../../CSS/TextField.css" />
       <Label layoutX="101.0" layoutY="205.0" prefHeight="33.0" prefWidth="54.0" text="Telefone:">
          <font>
             <Font name="System Bold" size="12.0" />
@@ -72,20 +72,20 @@
          </font>
       </Label>
       <Label fx:id="errorText" layoutX="145.0" layoutY="589.0" prefHeight="18.0" prefWidth="446.0" textFill="#ff0000" />
-      <TextField fx:id="emailText" layoutX="164.0" layoutY="155.0" prefHeight="35.0" prefWidth="444.0" promptText="Email" stylesheets="@../../../CSS/Marine.css" />
-      <TextField fx:id="telefoneText" layoutX="164.0" layoutY="205.0" prefHeight="35.0" prefWidth="444.0" promptText="Telefone" stylesheets="@../../../CSS/Marine.css" />
-      <TextField fx:id="nifText" layoutX="164.0" layoutY="255.0" prefHeight="35.0" prefWidth="444.0" promptText="NIF" stylesheets="@../../../CSS/Marine.css" />
-      <TextField fx:id="ruaText" layoutX="164.0" layoutY="355.0" prefHeight="35.0" prefWidth="444.0" promptText="Rua" stylesheets="@../../../CSS/Marine.css" />
-      <TextField fx:id="portaText" layoutX="164.0" layoutY="405.0" prefHeight="35.0" prefWidth="444.0" promptText="Porta" stylesheets="@../../../CSS/Marine.css" />
-      <TextField fx:id="codPostText" layoutX="164.0" layoutY="455.0" prefHeight="35.0" prefWidth="444.0" promptText="Código Postal" stylesheets="@../../../CSS/Marine.css" />
-      <TextField fx:id="usernameText" layoutX="164.0" layoutY="505.0" prefHeight="35.0" prefWidth="444.0" promptText="Username" stylesheets="@../../../CSS/Marine.css" />
+      <TextField fx:id="emailText" layoutX="164.0" layoutY="155.0" prefHeight="35.0" prefWidth="444.0" promptText="Email" stylesheets="@../../../CSS/TextField.css" />
+      <TextField fx:id="telefoneText" layoutX="164.0" layoutY="205.0" prefHeight="35.0" prefWidth="444.0" promptText="Telefone" stylesheets="@../../../CSS/TextField.css" />
+      <TextField fx:id="nifText" layoutX="164.0" layoutY="255.0" prefHeight="35.0" prefWidth="444.0" promptText="NIF" stylesheets="@../../../CSS/TextField.css" />
+      <TextField fx:id="ruaText" layoutX="164.0" layoutY="355.0" prefHeight="35.0" prefWidth="444.0" promptText="Rua" stylesheets="@../../../CSS/TextField.css" />
+      <TextField fx:id="portaText" layoutX="164.0" layoutY="405.0" prefHeight="35.0" prefWidth="444.0" promptText="Porta" stylesheets="@../../../CSS/TextField.css" />
+      <TextField fx:id="codPostText" layoutX="164.0" layoutY="455.0" prefHeight="35.0" prefWidth="444.0" promptText="Código Postal" stylesheets="@../../../CSS/TextField.css" />
+      <TextField fx:id="usernameText" layoutX="164.0" layoutY="505.0" prefHeight="35.0" prefWidth="444.0" promptText="Username" stylesheets="@../../../CSS/TextField.css" />
       <Label layoutX="83.0" layoutY="305.0" prefHeight="34.0" prefWidth="68.0" text="Localidade:">
          <font>
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="localidadeText" layoutX="164.0" layoutY="305.0" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/Marine.css" />
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="183.0" layoutY="10.0" prefHeight="90.0" prefWidth="381.0" text="Novo Funcionário" AnchorPane.leftAnchor="183.0" AnchorPane.rightAnchor="120.0">
+      <TextField fx:id="localidadeText" layoutX="164.0" layoutY="305.0" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/TextField.css" />
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="164.0" layoutY="10.0" prefHeight="90.0" prefWidth="380.0" text="Novo Funcionário" AnchorPane.leftAnchor="164.0" AnchorPane.rightAnchor="140.0">
          <font>
             <Font name="Calibri Bold" size="50.0" />
          </font>
