--- a/src/main/resources/com/example/projeto2_desktop/AgendamentoNovoView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/AgendamentoNovoView.fxml
@@ -5,10 +5,11 @@
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="476.0" prefWidth="800.0" style="-fx-background-color: #FFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.NovoAgendamentoController">
    <children>
       <Label layoutX="265.0" layoutY="14.0" text="Novo Agendamento">
@@ -33,7 +34,6 @@
             <Font name="System Bold" size="12.0" />
          </font>
       </Label>
-      <TextField fx:id="horaFim" layoutX="205.0" layoutY="301.0" prefHeight="35.0" prefWidth="444.0" promptText="HH:MM:SS" stylesheets="@../../../CSS/Marine.css" />
       <DatePicker fx:id="data" layoutX="207.0" layoutY="207.0" prefHeight="26.0" prefWidth="254.0" />
       <Button layoutX="275.0" layoutY="375.0" mnemonicParsing="false" onAction="#criarAgendamento" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Agendamento">
          <font>
@@ -44,6 +44,7 @@
          </cursor>
       </Button>
       <Label fx:id="errorText" layoutX="207.0" layoutY="345.0" prefHeight="18.0" prefWidth="342.0" textFill="#e71010" />
-      <TextField fx:id="horaInicio" layoutX="205.0" layoutY="251.0" prefHeight="35.0" prefWidth="444.0" promptText="HH:MM:SS" stylesheets="@../../../CSS/Marine.css" />
+      <ComboBox fx:id="horaInicioBox" layoutX="215.0" layoutY="254.0" prefWidth="200.0" promptText="HH:mm" stylesheets="@../../../CSS/Marine.css"/>
+      <ComboBox fx:id="horaFimBox" layoutX="215.0" layoutY="305.0" prefWidth="200.0" promptText="HH:mm" stylesheets="@../../../CSS/Marine.css" />
    </children>
 </AnchorPane>
