--- a/src/main/resources/com/example/projeto2_desktop/AgendamentoVerificarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/AgendamentoVerificarView.fxml
@@ -1,62 +1,191 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.AgendamentoVerificarController">
+<AnchorPane minHeight="100.0" minWidth="100.0" prefHeight="600.0" prefWidth="800.0" style="-fx-background-color: #FFFF;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Agendamento.AgendamentoVerificarController">
    <children>
-      <Label layoutX="245.0" layoutY="14.0" text="Novo Agendamento">
-         <font>
-            <Font name="System Bold" size="31.0" />
-         </font>
-      </Label>
-      <ComboBox fx:id="clienteBox" layoutX="145.0" layoutY="81.0" prefHeight="40.0" prefWidth="254.0" promptText="Cliente:" style="-fx-background-color: #FFFF; -fx-border-color: #29296b;" stylesheets="@../../../CSS/Marine.css" />
-      <ComboBox fx:id="embarcacaoBox" layoutX="145.0" layoutY="141.0" onAction="#getAllEmbarcacoes" prefHeight="40.0" prefWidth="254.0" promptText="Embarcação:" style="-fx-background-color: #FFFF; -fx-border-color: #29296b;" stylesheets="@../../../CSS/Marine.css" />
-      <Label layoutX="146.0" layoutY="203.0" prefHeight="34.0" prefWidth="39.0" text="Data:">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="105.0" layoutY="251.0" prefHeight="32.0" text="Hora de Inicio:">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Label layoutX="113.0" layoutY="301.0" prefHeight="33.0" text="Hora de Fim:">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <TextField fx:id="horaInicio" layoutX="205.0" layoutY="251.0" prefHeight="35.0" prefWidth="444.0" promptText="HH:mm:ss" stylesheets="@../../../CSS/Marine.css" />
-      <DatePicker fx:id="data" layoutX="207.0" layoutY="207.0" prefHeight="26.0" prefWidth="254.0" />
-      <Label layoutX="143.0" layoutY="351.0" prefHeight="33.0" prefWidth="54.0" text="Extras:">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Button layoutX="205.0" layoutY="355.0" mnemonicParsing="false" onAction="#addExtras" stylesheets="@../../../CSS/Marine.css" text="Adicionar Extras" />
-      <Label layoutX="143.0" layoutY="401.0" prefHeight="33.0" prefWidth="54.0" text="Valor">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font>
-      </Label>
-      <Button layoutX="265.0" layoutY="495.0" mnemonicParsing="false" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Agendamento">
-         <font>
-            <Font size="21.0" />
-         </font>
-         <cursor>
-            <Cursor fx:constant="HAND" />
-         </cursor>
-      </Button>
-      <Label fx:id="valorText" layoutX="205.0" layoutY="409.0" prefHeight="18.0" prefWidth="54.0" text="Label" />
-      <TextField fx:id="horaFim" layoutX="205.0" layoutY="301.0" prefHeight="35.0" prefWidth="444.0" promptText="HH:mm:ss" stylesheets="@../../../CSS/Marine.css" />
-      <Label layoutX="251.0" layoutY="409.0" text="€" />
-      <Label fx:id="errorText" layoutX="197.0" layoutY="456.0" prefHeight="18.0" prefWidth="375.0" textFill="#e70a0a" />
+      <HBox alignment="CENTER" prefHeight="62.0" prefWidth="800.0">
+         <children>
+            <Label text="Resumo do Agendamento">
+               <font>
+                  <Font name="System Bold" size="31.0" />
+               </font>
+            </Label>
+         </children>
+      </HBox>
+      <Label fx:id="errorText" layoutX="227.0" layoutY="486.0" prefHeight="18.0" prefWidth="375.0" textFill="#e70a0a" />
+      <VBox alignment="TOP_RIGHT" layoutX="173.0" layoutY="88.0" prefHeight="400.0" prefWidth="100.0">
+         <children>
+            <Label prefHeight="40.0" text="Cliente:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="40.0" text="Embarcação:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="40.0" text="Data:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="40.0" text="Hora de Inicio:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="40.0" text="Hora de Fim:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="40.0" text="Extras:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label prefHeight="40.0" text="Valor:">
+               <font>
+                  <Font name="System Bold" size="12.0" />
+               </font>
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+      <VBox fx:id="editVbox" layoutX="285.0" layoutY="88.0" prefHeight="400.0" prefWidth="415.0" visible="false">
+         <children>
+            <ComboBox fx:id="clienteBox" prefHeight="40.0" prefWidth="254.0" promptText="Cliente:" style="-fx-background-color: #FFFF; -fx-border-color: #29296b;" stylesheets="@../../../CSS/Marine.css">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ComboBox>
+            <ComboBox fx:id="embarcacaoBox" onAction="#getAllEmbarcacoes" prefHeight="40.0" prefWidth="254.0" promptText="Embarcação:" style="-fx-background-color: #FFFF; -fx-border-color: #29296b;" stylesheets="@../../../CSS/Marine.css">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ComboBox>
+            <DatePicker fx:id="data" prefHeight="40.0" prefWidth="254.0">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </DatePicker>
+            <ComboBox fx:id="horaInicioBox" prefHeight="40.0" prefWidth="200.0" promptText="HH:mm" stylesheets="@../../../CSS/Marine.css">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ComboBox>
+            <ComboBox fx:id="horaFimBox" prefHeight="40.0" prefWidth="200.0" promptText="HH:mm" stylesheets="@../../../CSS/Marine.css">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </ComboBox>
+            <Button mnemonicParsing="false" onAction="#addExtras" prefHeight="40.0" stylesheets="@../../../CSS/Marine.css" text="Ver/Adicionar Extras">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+            <Label fx:id="valorText" prefHeight="40.0" prefWidth="54.0" text="Label">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+      <VBox fx:id="infoVbox" layoutX="293.0" layoutY="88.0" prefHeight="400.0" prefWidth="160.0">
+         <children>
+            <Label fx:id="clienteText" prefHeight="40.0" text="Cliente:">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="embarcacaoText" prefHeight="40.0" text="Embarcação:">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="dataText" prefHeight="40.0" text="Data:">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="horaInicioText" prefHeight="40.0" text="Hora de Inicio:">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Label fx:id="horaFimText" prefHeight="40.0" text="Hora de Fim:">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Label>
+            <Button mnemonicParsing="false" onAction="#addExtras" prefHeight="40.0" stylesheets="@../../../CSS/Marine.css" text="Ver/Adicionar Extras">
+               <VBox.margin>
+                  <Insets bottom="20.0" />
+               </VBox.margin>
+            </Button>
+            <Label fx:id="valor" prefHeight="40.0" text="Extras:">
+               <VBox.margin>
+                  <Insets />
+               </VBox.margin>
+            </Label>
+         </children>
+      </VBox>
+      <HBox alignment="CENTER" layoutX="3.0" layoutY="516.0" prefHeight="68.0" prefWidth="800.0">
+         <children>
+            <Button mnemonicParsing="false" onAction="#editarAgendamento" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Alterar Agendamento">
+               <font>
+                  <Font size="21.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <HBox.margin>
+                  <Insets right="20.0" />
+               </HBox.margin>
+            </Button>
+            <Button mnemonicParsing="false" onAction="#criarAgendamento" pickOnBounds="false" prefHeight="62.0" prefWidth="256.0" stylesheets="@../../../CSS/Marine.css" text="Criar Agendamento">
+               <font>
+                  <Font size="21.0" />
+               </font>
+               <cursor>
+                  <Cursor fx:constant="HAND" />
+               </cursor>
+               <HBox.margin>
+                  <Insets left="20.0" />
+               </HBox.margin>
+            </Button>
+         </children>
+      </HBox>
    </children>
 </AnchorPane>
