--- a/src/main/resources/com/example/projeto2_desktop/ClienteEditarView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ClienteEditarView.fxml
@@ -12,7 +12,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="370.0" style="-fx-background-color: #FFFF;" stylesheets="@../../../CSS/Marine.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller.Cliente.EditarClienteController">
    <children>
-      <Label alignment="CENTER" contentDisplay="CENTER" layoutX="-15.0" layoutY="-14.0" prefHeight="90.0" prefWidth="690.0" text="Editar Cliente">
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutY="-14.0" prefHeight="90.0" prefWidth="675.0" text="Editar Cliente">
          <font>
             <Font name="Calibri Bold" size="50.0" />
          </font>
@@ -101,7 +101,7 @@
             </Label>
          </children>
       </VBox>
-      <VBox fx:id="editVbox" layoutX="172.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0" visible="false">
+      <VBox fx:id="editVbox" layoutX="172.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0">
          <children>
             <TextField fx:id="nomeText" prefHeight="35.0" prefWidth="444.0" promptText="Nome" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
@@ -123,17 +123,17 @@
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </TextField>
-            <TextField fx:id="localidadeText" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/Marine.css">
-               <VBox.margin>
-                  <Insets bottom="10.0" top="7.0" />
-               </VBox.margin>
-            </TextField>
             <TextField fx:id="ruaText" prefHeight="35.0" prefWidth="444.0" promptText="Rua" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
             </TextField>
             <TextField fx:id="portaText" prefHeight="35.0" prefWidth="444.0" promptText="Porta" stylesheets="@../../../CSS/Marine.css">
+               <VBox.margin>
+                  <Insets bottom="10.0" top="7.0" />
+               </VBox.margin>
+            </TextField>
+            <TextField fx:id="localidadeText" prefHeight="35.0" prefWidth="444.0" promptText="Localidade" stylesheets="@../../../CSS/Marine.css">
                <VBox.margin>
                   <Insets bottom="10.0" top="7.0" />
                </VBox.margin>
@@ -172,7 +172,7 @@
             <Cursor fx:constant="HAND" />
          </cursor>
       </Button>
-      <VBox fx:id="infoVbox" layoutX="182.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0">
+      <VBox fx:id="infoVbox" layoutX="182.0" layoutY="85.0" prefHeight="492.0" prefWidth="444.0" visible="false">
          <children>
             <Label fx:id="nome" prefHeight="35.0" prefWidth="600.0" text="Label">
                <VBox.margin>
