--- a/src/main/resources/com/example/projeto2_desktop/ExtraItemView.fxml
+++ b/src/main/resources/com/example/projeto2_desktop/ExtraItemView.fxml
@@ -24,7 +24,7 @@
          <HBox.margin>
             <Insets right="50.0" />
          </HBox.margin></Label>
-      <ImageView fitHeight="40.0" fitWidth="20.0" onMouseClicked="#add" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="plusButton" fitHeight="40.0" fitWidth="20.0" onMouseClicked="#add" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
             <Insets left="10.0" right="20.0" />
          </HBox.margin>
@@ -40,7 +40,7 @@
             <Insets />
          </HBox.margin>
       </Label>
-      <ImageView fitHeight="40.0" fitWidth="20.0" onMouseClicked="#subtract" pickOnBounds="true" preserveRatio="true">
+      <ImageView fx:id="minusButton" fitHeight="40.0" fitWidth="20.0" onMouseClicked="#subtract" pickOnBounds="true" preserveRatio="true">
          <HBox.margin>
             <Insets />
          </HBox.margin>
